<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:minHeight="?attr/actionBarSize"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_iv_b_heigh_dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="center"
            android:minWidth="?attr/actionBarSize"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_b_heigh_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16"
                android:src="?attr/b_heigh_app"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/height"
                android:textColor="?attr/color_light_text_description"
                android:textSize="@dimen/_14sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_iv_b_dob_dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="center"
            android:minWidth="?attr/actionBarSize"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_b_dob_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16"
                android:src="?attr/b_dob_app"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/age"
                android:textColor="?attr/color_light_text_description"
                android:textSize="@dimen/_14sp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_iv_b_male_dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="center"
            android:minWidth="?attr/actionBarSize"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_b_male_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16"
                android:src="?attr/b_male_app"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gender"
                android:textColor="?attr/color_light_text_description"
                android:textSize="@dimen/_14sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_iv_b_bodytype_2_dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="center"
            android:minWidth="?attr/actionBarSize"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_b_bodytype_2_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16"
                android:src="?attr/b_bodytype_1_app"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_level"
                android:textColor="?attr/color_light_text_description"
                android:textSize="@dimen/_14sp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_iv_b_metric2_dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="center"
            android:minWidth="?attr/actionBarSize"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_b_metric2_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16"
                android:src="?attr/b_metric_app"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/measurements"
                android:textColor="?attr/color_light_text_description"
                android:textSize="@dimen/_14sp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_iv_target_weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="center"
            android:minWidth="?attr/actionBarSize"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_target_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16"
                android:src="?attr/b_targetweight"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/target_weight"
                android:textColor="?attr/color_light_text_description"
                android:textSize="@dimen/_14sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
